# Aliengo-Elevation-Map

./: .gitignore
src/aliengo_description/launch/: aliengo_rviz.launch
src/aliengo_description/urdf/: aliengo.urdf  aliengo.urdf.xacro
src/communication/: CMakeLists.txt  package.xml
src/communication/include/perception/: height_map_t.lcm  joint_positions_t.hpp  joint_positions_t.lcm  robot_location_t.hpp
src/communication/src/: communication_node.cpp
src/elevation_mapping/: CMakeLists.txt
src/elevation_mapping/include/elevation_mapping/postprocessing/: PostprocessingPipelineFunctor.hpp
src/elevation_mapping/include/perception/: height_map_t.hpp  robot_location_t.lcm
src/elevation_mapping/src/: ElevationMap.cpp  ElevationMapping.cpp
src/elevation_mapping/src/postprocessing/: PostprocessingPipelineFunctor.cpp
src/elevation_mapping_demos/config/postprocessing/: postprocessor_pipeline.yaml
src/elevation_mapping_demos/config/robots/: d435_t265.yaml  waffle_robot.yaml
src/elevation_mapping_demos/launch/: d435_t265.launch  rs_d400_and_t265.launch  turtlesim3_waffle_demo.launch
src/elevation_mapping_demos/rviz/: d435_t265.rviz
src/elevation_mapping_demos/scripts/: d435_t265.py  height_map_t.py  robot_location_t.py
